# DeFi_0x_Ethers_Metamsk_Test

./: .env.example  .gitignore  Cargo.toml
src/: api.rs  client.rs  config.rs  dexes.rs  ethers.rs  main.rs  tasks.rs
src/api/: ox.rs
src/api/ox/: params.rs  price.rs  request.rs
src/api/ox/params/: input_params_type.rs  order_book_params.rs  params_inerface.rs  quote_params.rs
src/api/ox/params/input_params_type/: input_params_type.rs
src/api/ox/price/: get_price.rs
src/api/ox/request/: order_book.rs  quote.rs
src/client/: types.rs
src/client/provider/: provider.rs
src/client/types/: client_types.rs
src/client/wallet/: wallet.rs
src/config/: Pairs.json  pairs.rs
src/logs/: errors.rs  info.rs
src/tasks/: helper.rs  look_for_arbitration_opportunity.rs  test_order.rs
src/tasks/helper/: format_price.rs
