[package]
name = "flash-loans_crypto-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.107"
serde_qs = "0.12.0"
juniper = "0.15.11"
dotenv_codegen = "0.15.0"
ethers = "2.0.10"
